# suturo_navigation

./: .gitignore  README.md  dependencies.rosinsall  dependencies.rosinstall  workspace.rosinstall
mapping_hector_slam/: CMakeLists.txt  package.xml
mapping_hector_slam/launch/: hector_slam.launch  map_world.launch
object_finder/: CMakeLists.txt  costmap_plugins.xml  package.xml
object_finder/cfg/: ObjectFinder.cfg
object_finder/config/: costmap_params.yaml
object_finder/include/object_finder/: static_clearing_layer.h
object_finder/launch/: comparisson.launch  example.launch
object_finder/params/: costmap_headcam_only.yaml  costmap_inflation_10.yaml  costmap_inflation_20.yaml  costmap_laser_marking_only.yaml  costmap_laser_marking_only_inflation_10.yaml  costmap_laser_only.yaml  costmap_params.yaml
object_finder/scripts/: compare_finder.py
object_finder/src/: object_finder_node.cpp  static_clearing_layer.cpp
obstacle_finder/: CMakeLists.txt  package.xml
obstacle_finder/cfg/: of.cfg
obstacle_finder/src/: object_finder.py  obstacle_finder.py
suturo_nav/: CMakeLists.txt  package.xml
suturo_nav/config/: costmap.yaml  local_planner.yaml
suturo_nav/launch/: suturo_nav.launch
suturo_navigation_fix/: CMakeLists.txt  package.xml
suturo_navigation_fix/src/: nav_fix.py
suturo_navigation_launch/: CMakeLists.txt  package.xml
suturo_navigation_launch/config/: costmap_params.yaml
suturo_navigation_launch/launch/: start_suturo_navigation.launch  start_suturo_navigation_gazebo.launch
