<?xml version="1.0"?>
<package format="2">
  <name>mapping_hector_slam</name>
  <version>0.0.1</version>
  <description>The mapping_hector_slam package</description>

  <maintainer email="stelter2@uni-bremen.de">marc</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_mapping</build_depend>
  <build_depend>hsrb_gazebo_launch</build_depend>
  <build_depend>tmc_potential_maps</build_depend>
  <build_export_depend>hector_mapping</build_export_depend>
  <build_export_depend>hsrb_gazebo_launch</build_export_depend>
  <build_export_depend>tmc_potential_maps</build_export_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hsrb_gazebo_launch</exec_depend>
  <exec_depend>tmc_potential_maps</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
