<?xml version="1.0"?>
<package format="2">
  <name>suturo_navigation_launch</name>
  <version>0.0.1</version>
  <description>The snap_map_icp-launch package</description>

  <maintainer email="stelter2@uni-bremen.de">marc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>snap_map_icp</exec_depend>
  <exec_depend>obstacle_finder</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
